# QtPractice

./: CMakeLists.txt  CircuitConfiguration.h  CustomQueue.h  cdrworker.cpp  cdrworker.h  chartmanager.cpp  chartmanager.h  chartwidget.cpp  chartwidget.h  circuitconfiguratorwidget.cpp  circuitconfiguratorwidget.h  circuitdatareceiver.cpp  circuitdatareceiver.h  circuitmanager.cpp  circuitmanager.h  client.cpp  client.h  collapseelement.cpp  collapseelement.h  dataanalyzer.cpp  dataanalyzer.h  datacontainer.cpp  datacontainer.h  dataprocessor.cpp  dataprocessor.h  filterworker.cpp  filterworker.h  linux-system-usage.hpp  main.cpp  nii_test.cpp  nii_test.h  perfomancechecker.cpp  perfomancechecker.h  server.cpp  server.h  udpclient.cpp  udpclient.h  udpserver.cpp  udpserver.h  windowworker.cpp  (+6 more)
circuit_data/: all_data.txt
cmake/: FindLibUdev.cmake  FindUSB1.cmake
libnii/Headers/: libnii.h  list.h  nii_internal.h
